--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
             </ul>
         </div>
         <div class="main">
-            <h1>Main Content Area</h1>
-            <p>This is where your charts, tables, or other data will go.</p>
+            <h1>Who controls in Syria</h1>
+            <p>Syrian and Russian jets have ramped up air raids on Idlib and Aleppo as the government of President Bashar al-Assad tries to slow the advance of opposition fighters.
+
+                The raids followed big gains by the opposition over the past few days that have greatly shifted the front line in Syria’s 13-year-long war.</p>
         </div>
     </div>
 </body>
